--- a/Receitas/projeto_10AlmeiraoComArrozBranco.html
+++ b/Receitas/projeto_10AlmeiraoComArrozBranco.html
@@ -55,7 +55,8 @@
                     <h1 class="corForte">Almeirão com Arroz Branco</h1>
                     <!-- como fazer 'nome da receita' -->
                     <h3 class=" corFraca"><span>Como fazero o seu Almeirão com Arroz Branco?</span></h3>
-                    <img src="../image/Almeirao.jpeg" class="img-fluid"  style="max-width: 500px; max-height: 350px;" alt="...">
+                    <img src="../image/Almeirao.jpeg" class="img-fluid" style="max-width: 500px; max-height: 350px;"
+                        alt="...">
                     <br>
                     <br><!--breve história do prato,  -->
                     <p>O Almeirão com Arroz Branco é uma combinação deliciosa e saudável que destaca a simplicidade e os
@@ -101,10 +102,22 @@
                         jantar mais sofisticado, essa receita se encaixa perfeitamente em reuniões familiares,
                         celebrações informais ou até mesmo em um dia comum da semana.
                     </p>
-                    <button type="button" class="btn bgForte btn-lg"><a href="#"
-                            class="text-decoration-none text-white p-5">Saiba mais</a></button>
-                </div>
 
+                </div>
+                <hr>
+                <div class="container text-center text-white">
+                    <!-- ingredientes -->
+                    <h2 class="corForte">Benefícios</h2>
+                    <p class="corFraca">O almeirão, uma verdura de folhas verdes, é uma fonte rica em nutrientes
+                        essenciais, como vitaminas A, C e K, além de minerais como cálcio e potássio, contribuindo para
+                        uma dieta equilibrada e para a saúde geral. Com propriedades antioxidantes, promove o bem-estar
+                        e contribuindo para um processo de envelhecimento saudável. </p>
+                    <p class="corFraca">Seu teor de vitamina A fortalece a saúde ocular, enquanto a presença de vitamina
+                        C fortalece o sistema imunológico. Além disso, o cálcio presente contribui para a saúde óssea e
+                        a vitamina K apoia a manutenção da densidade óssea, prevenindo a osteoporose. O alto teor de
+                        fibras favorece a saúde digestiva, promovendo a regularidade intestinal e a função
+                        gastrointestinal saudável.</p>
+                </div>
             </section>
 
             <hr>
@@ -183,7 +196,7 @@
                                     </div>
 
                                 </li>
-                                    <div style="clear: both"></div>
+                                <div style="clear: both"></div>
                             </ul>
                         </section>
                     </section>
@@ -199,7 +212,7 @@
                                     alho até dourarem.</li>
                                 <li>Adicione as tiras de almeirão ao refogado, mexendo ocasionalmente até que
                                     murchem e fiquem macias.</li>
-                                    <li>Reserve o almeirão.</li>
+                                <li>Reserve o almeirão.</li>
                             </ul>
                             <h3 class="corForte">Preparando o Arroz Branco</h3>
                             <ul class="corFraca">
@@ -208,7 +221,8 @@
                                 <li>Acrescente água (conforme as instruções do pacote de arroz), sal e pimenta a
                                     gosto.</li>
                                 <li>Cozinhe o arroz em fogo médio até que esteja completamente cozido e a água
-                                    tenha sido absorvida.<li>
+                                    tenha sido absorvida.
+                                <li>
                             </ul>
                             <h3 class="corForte">Finalizando o Prato</h3>
                             <ul class="corFraca">
@@ -218,7 +232,7 @@
                                 <li>Sirva quente, acompanhado de uma salada verde ou como acompanhamento para
                                     carnes grelhadas.</li>
                             </ul>
-                            
+
                         </div>
                     </section>
                 </div>
@@ -232,7 +246,7 @@
                         title="COMO TIRAR O AMARGO DO ALMEIRÃO MUITO RAPIDO" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                         allowfullscreen></iframe>
-                        
+
                 </div>
 
             </section>
