--- a/Receitas/projeto_11NaboERabanete.html
+++ b/Receitas/projeto_11NaboERabanete.html
@@ -55,8 +55,8 @@
                     <h1 class="corForte">Nabo e Rabanete Assado com Molho de Ervas</h1>
                     <!-- como fazer 'nome da receita' -->
                     <h3 class=" corFraca"><span>Como fazero o seu Nabo e Rabanete Assado?</span></h3>
-                    <img src="../image/NaboeRabaneteAssadocomMolhodeErvas.jpeg" class="img-fluid" style="max-width: 500px; max-height: 350px;"
-                        alt="...">
+                    <img src="../image/NaboeRabaneteAssadocomMolhodeErvas.jpeg" class="img-fluid"
+                        style="max-width: 500px; max-height: 350px;" alt="...">
                     <br>
                     <br><!--breve história do prato,  -->
                     <p>Esta receita tem suas raízes na tradição de assar vegetais para realçar seus sabores naturais. A
@@ -114,10 +114,20 @@
                         mas também pode ser uma opção deliciosa para refeições vegetarianas. É uma excelente escolha
                         para jantares especiais, festas e reuniões familiares.
                     </p>
-                    <button type="button" class="btn bgForte btn-lg"><a href="#"
-                            class="text-decoration-none text-white p-5">Saiba mais</a></button>
-                </div>
 
+                </div>
+                <hr>
+                <div class="container text-center text-white">
+                    <!-- ingredientes -->
+                    <h2 class="corForte">Benefícios</h2>
+                    <p class="corFraca">O nabo, conhecido por seu sabor picante e textura crocante, é rico em vitamina C
+                        e potássio. Sua notável presença de fibras favorece a saúde digestiva, enquanto seu conteúdo de
+                        potássio pode ajudar a regular a pressão arterial e promover a saúde cardiovascular. </p>
+                    <p class="corFraca">Além disso, sua significativa oferta de antioxidantes, como a vitamina C,
+                        fortalece o sistema imunológico, ajudando o corpo a combater infecções e a manter a vitalidade.
+                        Possui também propriedades anticancerígenas e contribui para a saúde óssea pela presença de
+                        cálcio e magnésio.</p>
+                </div>
             </section>
 
             <hr>
