--- a/Receitas/projeto_1couveParmegiana.html
+++ b/Receitas/projeto_1couveParmegiana.html
@@ -128,10 +128,19 @@
                         especialmente para aqueles que buscam alternativas mais leves e vegetarianas. Pode ser servida
                         como prato principal em almoços e jantares, sendo uma escolha versátil para qualquer ocasião.
                     </p>
-                    <button type="button" class="btn bgForte btn-lg"><a href="#"
-                            class="text-decoration-none text-white p-5">Saiba mais</a></button>
-                </div>
 
+                </div>
+                <hr>
+                <div class="container text-center text-white">
+                    <!-- ingredientes -->
+                    <h2 class="corForte">Benefícios</h2>
+                    <p class="corFraca">A couve-flor é uma fonte rica em nutrientes essenciais, incluindo vitaminas C e
+                        K, folato e potássio, contribuindo para uma dieta equilibrada e para a saúde geral. Seus
+                        antioxidantes ajudam a prevenir doenças crônicas e promovem um envelhecimento saudável. </p>
+                    <p class="corFraca">A couve-flor é uma fonte rica em nutrientes essenciais, incluindo vitaminas C e
+                        K, folato e potássio, contribuindo para uma dieta equilibrada e para a saúde geral. Seus
+                        antioxidantes ajudam a prevenir doenças crônicas e promovem um envelhecimento saudável. </p>
+                </div>
             </section>
 
             <hr>
