--- a/Receitas/projeto_2GratinadoDeNabo.html
+++ b/Receitas/projeto_2GratinadoDeNabo.html
@@ -55,7 +55,8 @@
                     <h1 class="corForte">Gratinado de Nabo</h1>
                     <!-- como fazer 'nome da receita' -->
                     <h3 class=" corFraca"><span>Como fazer o seu Gratinado de Nabo</span></h3>
-                    <img src="../image/GratinadoDeNabo.jpeg" class="img-fluid" style="max-width: 500px; max-height: 350px;" alt="...">
+                    <img src="../image/GratinadoDeNabo.jpeg" class="img-fluid"
+                        style="max-width: 500px; max-height: 350px;" alt="...">
                     <br>
                     <br><!--breve história do prato,  -->
                     <p>O Gratinado de Nabo é uma deliciosa receita que combina a simplicidade dos nabos com a riqueza do
@@ -101,10 +102,20 @@
                         ocasiões. Seja como acompanhamento em um jantar especial ou como prato principal em uma refeição
                         reconfortante, este gratinado é uma escolha que certamente agradará a todos.
                     </p>
-                    <button type="button" class="btn bgForte btn-lg"><a href="#"
-                            class="text-decoration-none text-white p-5">Saiba mais</a></button>
-                </div>
 
+                </div>
+                <hr>
+                <div class="container text-center text-white">
+                    <!-- ingredientes -->
+                    <h2 class="corForte">Benefícios</h2>
+                    <p class="corFraca">O rabanete é uma fonte nutritiva que oferece uma variedade de vitaminas e
+                        minerais essenciais, como vitamina C, potássio e fibras. Sua notável presença de fibras promove
+                        a saúde digestiva, enquanto o potássio pode desempenhar um papel crucial na regulação da pressão
+                        arterial e na saúde cardiovascular. Além disso, seus antioxidantes, incluindo a vitamina C,
+                        fortalecem o sistema imunológico, ajudando o corpo a combater infecções. É um ótimo aliado na
+                        hidratação, pelo seu alto teor de água, e contribui para uma pele saudável e para a saúde óssea.
+                    </p>
+                </div>
             </section>
 
             <hr>
@@ -227,13 +238,13 @@
                 </div>
             </section>
             <hr>
-            
+
             <!-- vídeo -->
             <section id="scrollspyHeading3">
                 <div class="container">
                     <div class="container text-center mt-5">
                         <h1 class="corForte">Resolução</h1>
-    
+
                         <iframe width="560" height="315" src="https://www.youtube.com/embed/3bWJ9KRcAjk"
                             title="COMO FAZER GRATINADO DE NABO" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
