--- a/Receitas/projeto_3RisotoDePrimentaDeCheiro.html
+++ b/Receitas/projeto_3RisotoDePrimentaDeCheiro.html
@@ -103,10 +103,21 @@
                     <p class="corFraca">O Risoto de Pimenta de Cheiro é uma escolha perfeita para impressionar em
                         jantares especiais, comemorações ou simplesmente para saborear uma refeição gourmet em casa
                     </p>
-                    <button type="button" class="btn bgForte btn-lg"><a href="#"
-                            class="text-decoration-none text-white p-5">Saiba mais</a></button>
-                </div>
 
+                </div>
+                <hr>
+                <div class="container text-center text-white">
+                    <!-- ingredientes -->
+                    <h2 class="corForte">Benefícios</h2>
+                    <p class="corFraca">A pimenta-de-cheiro, conhecida por sua intensidade de sabor e aroma marcante, é
+                        uma fonte valiosa de nutrientes essenciais, incluindo vitaminas A e C. Seus poderosos
+                        antioxidantes auxiliam na proteção das células contra os danos dos radicais livres, enquanto
+                        suas propriedades anti-inflamatórias sugerem um potencial para o alívio de condições
+                        inflamatórias. </p>
+                    <p class="corFraca">Além disso, os possíveis efeitos benéficos na saúde do coração e no metabolismo
+                        ressaltam a pimenta-de-cheiro como um ingrediente versátil capaz de promover vitalidade e
+                        equilíbrio.</p>
+                </div>
             </section>
 
             <hr>
