--- a/Receitas/projeto_4QuicheDeAlhoPoro.html
+++ b/Receitas/projeto_4QuicheDeAlhoPoro.html
@@ -55,7 +55,8 @@
                     <h1 class="corForte">Quiche de Alho Poró</h1>
                     <!-- como fazer 'nome da receita' -->
                     <h3 class=" corFraca"><span>Como fazer a sua Quiche de Alho Poró?</span></h3>
-                    <img src="../image/QuicheAlho.jpeg" class="img-fluid"  style="max-width: 500px; max-height: 350px;" alt="...">
+                    <img src="../image/QuicheAlho.jpeg" class="img-fluid" style="max-width: 500px; max-height: 350px;"
+                        alt="...">
                     <br>
                     <br><!--breve história do prato,  -->
                     <p>A quiche de alho-poró é uma receita clássica da culinária francesa que se popularizou em todo o
@@ -150,10 +151,21 @@
                         ocasiões, desde um almoço em família até eventos mais formais. É uma excelente escolha para
                         brunches, festas, piqueniques ou como prato principal em um jantar especial.
                     </p>
-                    <button type="button" class="btn bgForte btn-lg"><a href="#"
-                            class="text-decoration-none text-white p-5">Saiba mais</a></button>
-                </div>
 
+                </div>
+                <hr>
+                <div class="container text-center text-white">
+                    <!-- ingredientes -->
+                    <h2 class="corForte">Benefícios</h2>
+                    <p class="corFraca">Conhecido por seu sabor suave e semelhante ao alho, o alho-poró é uma fonte de
+                        nutrientes vitais, incluindo vitaminas A, K, C e folato, que contribuem para a manutenção da
+                        saúde do corpo. Seus compostos, como a alicina, têm sido associados à melhoria da saúde
+                        cardiovascular, ajudando a regular a pressão arterial e a fortalecer o coração. </p>
+                    <p class="corFraca">CA presença de fibras no alho-poró apoia uma digestão saudável e regular,
+                        enquanto seus antioxidantes naturais ajudam a proteger as células dos danos dos radicais livres.
+                        Com sua contribuição para a saúde óssea e sua capacidade de fortalecer o sistema imunológico, o
+                        alho-poró se destaca como um alimento que garante vitalidade.</p>
+                </div>
             </section>
 
             <hr>
