--- a/Receitas/projeto_5LasanhaDeBerinjela.html
+++ b/Receitas/projeto_5LasanhaDeBerinjela.html
@@ -110,10 +110,22 @@
                         ocasiões. Desde refeições do dia a dia até eventos especiais, esta receita agrada a diferentes
                         paladares e é uma escolha excelente para quem busca uma alternativa mais leve e nutritiva.
                     </p>
-                    <button type="button" class="btn bgForte btn-lg"><a href="#"
-                            class="text-decoration-none text-white p-5">Saiba mais</a></button>
-                </div>
 
+                </div>
+                <hr>
+                <div class="container text-center text-white">
+                    <!-- ingredientes -->
+                    <h2 class="corForte">Benefícios</h2>
+                    <p class="corFraca">A berinjela é uma fonte de vitaminas e minerais essenciais, como vitaminas C e
+                        K, potássio e folato, contribuindo para uma dieta equilibrada e para a saúde do organismo. Seus
+                        antioxidantes combatem os radicais livres, ajudando a prevenir doenças crônicas e promovendo um
+                        envelhecimento saudável. </p>
+                    <p class="corFraca">A beringela pode ser um aliado no controle do colesterol, contribuindo para a
+                        saúde cardiovascular, e a riqueza em fibras favorece a saúde digestiva. Sua capacidade de
+                        regular os níveis de açúcar no sangue pode ser benéfica para indivíduos com diabetes, e seu
+                        baixo teor calórico e alto teor de fibras podem ser úteis na gestão do peso quando incorporada
+                        em uma dieta equilibrada e estilo de vida ativo.</p>
+                </div>
             </section>
 
             <hr>
