--- a/Receitas/projeto_6DoceDeAbobora.html
+++ b/Receitas/projeto_6DoceDeAbobora.html
@@ -55,7 +55,8 @@
                     <h1 class="corForte">Doce de Abóbora com Coco</h1>
                     <!-- como fazer 'nome da receita' -->
                     <h3 class=" corFraca"><span>Como fazer o seu Doce de Abóbora com Coco?</span></h3>
-                    <img src="../image/doceDeAbobora.jpeg" class="img-fluid" style="max-width: 500px; max-height: 350px;" alt="...">
+                    <img src="../image/doceDeAbobora.jpeg" class="img-fluid"
+                        style="max-width: 500px; max-height: 350px;" alt="...">
                     <br>
                     <br><!--breve história do prato,  -->
                     <p>O doce de abóbora com coco é uma sobremesa tradicional brasileira, apreciada em diversas regiões
@@ -99,10 +100,19 @@
                         Ele é uma escolha excelente para sobremesas em almoços de família, festas juninas,
                         confraternizações e até mesmo como acompanhamento em celebrações especiais.
                     </p>
-                    <button type="button" class="btn bgForte btn-lg"><a href="#"
-                            class="text-decoration-none text-white p-5">Saiba mais</a></button>
                 </div>
-
+                <hr>
+                <div class="container text-center text-white">
+                    <!-- ingredientes -->
+                    <h2 class="corForte">Benefícios</h2>
+                    <p class="corFraca">A abóbora possui vitaminas A e C, além de potássio e fibras, contribuindo para
+                        uma dieta equilibrada. Seu alto teor de vitamina A favorece a saúde ocular, enquanto a presença
+                        de vitamina C e antioxidantes fortalece o sistema imunológico, ajudando o corpo a combater
+                        infecções e a manter a vitalidade. </p>
+                    <p class="corFraca">Com propriedades que apoiam a saúde do coração, regulando a pressão arterial, e
+                        sua capacidade de promover a saciedade devido ao conteúdo de fibras e baixo teor calórico, a
+                        abóbora destaca-se como um alimento multifacetado que promove bem-estar e vitalidade.</p>
+                </div>
             </section>
 
             <hr>
@@ -249,11 +259,11 @@
                 <div class="container text-center">
                     <h1 class="corForte">Resolução</h1>
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/nj0ioMO92wA"
-                    title="MAIS FÁCIL DO QUE VOCÊ IMAGINAVA I DOCE DE ABOBORA COM COCO DA ROÇA" frameborder="0"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                    allowfullscreen></iframe>
+                        title="MAIS FÁCIL DO QUE VOCÊ IMAGINAVA I DOCE DE ABOBORA COM COCO DA ROÇA" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        allowfullscreen></iframe>
                 </div>
-                
+
             </section>
 
             <!-- Resultado -->
