--- a/Receitas/projeto_7PaoDeBatataDoce.html
+++ b/Receitas/projeto_7PaoDeBatataDoce.html
@@ -55,7 +55,8 @@
                     <h1 class="corForte">Pão de Batata Doce</h1>
                     <!-- como fazer 'nome da receita' -->
                     <h3 class=" corFraca"><span>Como fazer o seu Pão de Batata Doce?</span></h3>
-                    <img src="../image/PaoDoce.jpeg" class="img-fluid" style="max-width: 500px; max-height: 350px;" alt="...">
+                    <img src="../image/PaoDoce.jpeg" class="img-fluid" style="max-width: 500px; max-height: 350px;"
+                        alt="...">
                     <br>
                     <br><!--breve história do prato,  -->
                     <p>O Pão de Batata Doce é uma delícia que combina a suavidade da batata doce com a textura macia do
@@ -109,10 +110,20 @@
                         manhã acolhedor até um acompanhamento especial para um chá da tarde. A doçura sutil da batata
                         doce torna-o uma escolha excelente para eventos festivos ou refeições em família.
                     </p>
-                    <button type="button" class="btn bgForte btn-lg"><a href="#"
-                            class="text-decoration-none text-white p-5">Saiba mais</a></button>
-                </div>
 
+                </div>
+                <hr>
+                <div class="container text-center text-white">
+                    <!-- ingredientes -->
+                    <h2 class="corForte">Benefícios</h2>
+                    <p class="corFraca">Conhecida por sua polpa doce e coloração vibrante, a batata-doce oferece uma
+                        riqueza de nutrientes, incluindo vitaminas A, C e potássio. Sua capacidade de regular os níveis
+                        de açúcar no sangue, graças à presença de fibras, a torna benéfica para diabéticos e para a
+                        estabilização dos níveis de glicose. </p>
+                    <p class="corFraca">Além disso, sua abundância em fibras promove a saúde digestiva, enquanto a
+                        vitamina A presente na batata-doce contribui para a saúde dos olhos, além de proteger a pele
+                        contra danos dos radicais livres.</p>
+                </div>
             </section>
 
             <hr>
