--- a/Receitas/projeto_9tortinhaDeFolhaDeMostarda.html
+++ b/Receitas/projeto_9tortinhaDeFolhaDeMostarda.html
@@ -55,7 +55,8 @@
                     <h1 class="corForte">Tortinha de Folha de Mostarda</h1>
                     <!-- como fazer 'nome da receita' -->
                     <h3 class=" corFraca"><span>Como fazer a sua Tortinha de Folha de Mostarda?</span></h3>
-                    <img src="../image/tortilhaDeFolha.jpeg" class="img-fluid" style="max-width: 500px; max-height: 350px;" alt="...">
+                    <img src="../image/tortilhaDeFolha.jpeg" class="img-fluid"
+                        style="max-width: 500px; max-height: 350px;" alt="...">
                     <br>
                     <br><!--breve história do prato,  -->
                     <p>A tortinha de folha de mostarda é uma receita que combina a crocância da massa com o sabor único
@@ -113,10 +114,23 @@
                         permite que seja apreciada em diversas situações, seja em encontros informais com amigos ou em
                         celebrações especiais.
                     </p>
-                    <button type="button" class="btn bgForte btn-lg"><a href="#"
-                            class="text-decoration-none text-white p-5">Saiba mais</a></button>
-                </div>
 
+                </div>
+                <hr>
+                <div class="container text-center text-white">
+                    <!-- ingredientes -->
+                    <h2 class="corForte">Benefícios</h2>
+                    <p class="corFraca">As folhas de mostarda são uma fonte rica em nutrientes essenciais, incluindo
+                        vitaminas A, C e K, assim como cálcio, ferro e potássio, contribuindo para uma dieta equilibrada
+                        e para a saúde geral. Com propriedades antioxidantes, ajudam a combater os radicais livres,
+                        protegendo as células de danos e contribuindo para a prevenção de doenças crônicas. </p>
+                    <p class="corFraca">Além disso, o alto teor de vitamina A oferece suporte à saúde ocular, enquanto a
+                        presença de cálcio, magnésio e vitamina K fortalece os ossos e previne condições como a
+                        osteoporose. Seus antioxidantes também beneficiam a saúde cardiovascular, ajudando a regular a
+                        pressão arterial e reduzir a inflamação. </p>
+                    <p class="corFraca">Por fim, a abundância de fibras promove a digestão saudável, prevenindo a
+                        constipação e mantendo um sistema digestivo equilibrado e eficiente.</p>
+                </div>
             </section>
 
             <hr>
