--- a/index.html
+++ b/index.html
@@ -26,12 +26,7 @@
                 <li class="nav-item">
                     <a class="nav-link" href="#scrollspyHeading2">História</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#scrollspyHeading3">Ferramentas</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#scrollspyHeading4">Projetos</a>
-                </li>
+
                 <!-- comentário -->
             </ul>
         </nav>
@@ -170,15 +165,16 @@
                         <div class="col d-flex justify-content-center mt-4">
                             <a href="./Receitas/projeto_11NaboERabanete.html">
                                 <div class="card" style="width: 25rem;">
-                                    <img src="./image/NaboeRabaneteAssadocomMolhodeErvas.jpeg" class="card-img-top" alt="...">
+                                    <img src="./image/NaboeRabaneteAssadocomMolhodeErvas.jpeg" class="card-img-top"
+                                        alt="...">
                                     <div class="card-body cardhover">
                                         <p class="card-text cardhover text-center">Nabo e Rabanete Assado</p>
                                     </div>
                                 </div>
                             </a>
                         </div>
-                       
-                        
+
+
                     </div>
                 </div>
             </section>
@@ -186,6 +182,39 @@
             <!-- sem informação -->
 
             <section id="scrollspyHeading2">
+                <div class="container-fluid p-2">
+                    <hr>
+                    <h1 class="text-center p-3">
+                        História
+                    </h1>
+                    <div class="container p-2">
+
+                        <p>O Instituto Arapoti, sediado no Guará-DF, é uma organização sem fins lucrativos com a missão
+                            de
+                            impulsionar ideias sustentáveis e valores socioambientais. Reconhecido nacionalmente por
+                            suas
+                            práticas sustentáveis, o instituto reúne uma equipe multidisciplinar composta por
+                            profissionais
+                            como engenheiros ambientais, arquitetos, advogados e pedagogos para cada projeto específico.
+                            Suas iniciativas visam construir um futuro mais sustentável.</p>
+                        <p>Dentre os projetos já realizados, destaca-se a Horta Comunitária do Guará, promovendo
+                            sustentabilidade, saúde e bem-estar. No Condomínio Jardins Life, 300 apartamentos participam
+                            ativamente da compostagem de resíduos orgânicos. O Projeto Abrace Sustentável enfatiza a
+                            importância da Horta Orgânica para crianças assistidas pela Abrace, enquanto o Condomínio
+                            Jardim
+                            Europa se destaca pelo engajamento comunitário em sua horta orgânica. </p>
+                        <p>O Condomínio Mont Clair diferencia-se pela charmosa horta orgânica, elegante e com
+                            reaproveitamento de pneus, representando uma abordagem bela, criativa e sustentável. O
+                            Condomínio San Francisco, além de promover uma Festa Junina criativa e sustentável, adota o
+                            Projeto Condomínio Sustentável como destaque no licenciamento ambiental.</p>
+                        <p>No Condomínio Jardins dos Jatobás, a criatividade marca os projetos da horta comunitária,
+                            arquitetados por Natália Nunes. Por fim, a Escola Meu Primeiro Espaço - MEPE, integra a
+                            interação com a horta e pomar ao processo de aprendizagem das crianças, promovendo uma
+                            conexão
+                            valiosa com a natureza. Esses projetos exemplificam o compromisso do Instituto Arapoti com a
+                            promoção de práticas sustentáveis em diversas comunidades.</p>
+                    </div>
+                </div>
             </section>
 
             <!-- sem informação -->
